name:                nomyx-client
version:             1.0.0
synopsis:            CLI for Nomyx
description:         Please see README.md
homepage:            http://www.nomyx.net
license:             BSD3
license-file:        LICENSE
author:              Corentin Dupont
maintainer:          corentin.dupont@gmail.com
copyright:           2015 Corentin Dupont
category:            Game
build-type:          Simple
cabal-version:       >=1.10

Executable nomyx-client
  hs-source-dirs:      src
  Main-Is:             Main.hs
  ghc-options:         -Wall
  other-modules:       Nomyx.Client.Client
                       Nomyx.Client.Types
  build-depends:       base,
                       nomyx-api,
                       nomyx-language,
                       nomyx-core,
                       either -any,
                       mtl                    >= 2.1 && < 2.3,
                       servant,
                       servant-server,
                       servant-client,
                       swagger2,
                       lens -any,
                       optparse-applicative,
                       filepath,
                       yaml,
                       bytestring,
                       lens,
                       aeson,
                       http-client
  default-language:    Haskell2010

